--- a/html/introduction_slides.html
+++ b/html/introduction_slides.html
@@ -343,21 +343,17 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <li>Logistics</li>
 </ul>
 </section>
-<section>
-<section id="section" class="title-slide slide level1 center">
-<h1></h1>
-
-</section>
 <section id="anatomy-of-the-web-map" class="slide level2">
 <h2>Anatomy of the Web Map</h2>
 </section>
-<section id="section-1" class="slide level2" data-background="../slides/figs/gmaps.png" data-background-size="contain">
+<section id="title" class="slide level2">
+<h2>title</h2>
+
+<img data-src="../img/gmaps.png" class="r-stretch"></section>
+<section id="section" class="slide level2" data-background="../slides/figs/osm.png" data-background-size="contain">
 <h2></h2>
 </section>
-<section id="section-2" class="slide level2" data-background="../slides/figs/osm.png" data-background-size="contain">
-<h2></h2>
-</section>
-<section id="section-3" class="slide level2" data-background="../slides/figs/cdrc_maps.png" data-background-size="contain">
+<section id="section-1" class="slide level2" data-background="../slides/figs/cdrc_maps.png" data-background-size="contain">
 <h2></h2>
 </section>
 <section id="building-blocks-of-a-web-map" class="slide level2">
@@ -385,7 +381,7 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <table>
 <tbody>
 <tr class="odd">
-<td><img data-src="../slides/figs/paper_map.svg"></td>
+<td><img data-src="../img/gmaps/paper_map.svg"></td>
 <td><img data-src="../slides/figs/server.jpg"></td>
 </tr>
 </tbody>
@@ -395,9 +391,9 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <h2>Software</h2>
 <table>
 <colgroup>
-<col style="width: 60%">
-<col style="width: 20%">
-<col style="width: 19%">
+<col style="width: 55%">
+<col style="width: 22%">
+<col style="width: 22%">
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -412,8 +408,8 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <h2>Design</h2>
 <table>
 <colgroup>
-<col style="width: 16%">
-<col style="width: 83%">
+<col style="width: 22%">
+<col style="width: 77%">
 </colgroup>
 <tbody>
 <tr class="odd">
@@ -422,9 +418,9 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 </tr>
 </tbody>
 </table>
-</section></section>
+</section>
 <section>
-<section id="section-4" class="title-slide slide level1 center">
+<section id="section-2" class="title-slide slide level1 center">
 <h1></h1>
 
 </section>
@@ -450,7 +446,7 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 </ul>
 </section></section>
 <section>
-<section id="section-5" class="title-slide slide level1 center">
+<section id="section-3" class="title-slide slide level1 center">
 <h1></h1>
 
 </section>
@@ -463,7 +459,7 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <img src="../slides/figs/course_website.png" height="400">
 </center>
 <center>
-<small> <a href="http://darribas.org/wmn/"><code>darribas.org/wmn</code></a> </small>
+<small> <a href="https://gdsl-ul.github.io/wma/"><code>https://gdsl-ul.github.io/wma/</code></a> </small>
 </center>
 </section>
 <section id="lecturelabs" class="slide level2">
@@ -482,7 +478,7 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 </center>
 </section></section>
 <section>
-<section id="section-6" class="title-slide slide level1 center">
+<section id="section-4" class="title-slide slide level1 center">
 <h1></h1>
 
 </section>
@@ -495,7 +491,7 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 </ul>
 </div>
 </section></section>
-<section id="section-7" class="title-slide slide level1 center">
+<section id="section-5" class="title-slide slide level1 center">
 <h1></h1>
 <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"></a><br><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Web Mapping &amp; Analysis</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://darribas.org" property="cc:attributionName" rel="cc:attributionURL">Dani Arribas-Bel</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
 <div class="footer footer-default">
