intro slide basic edits

--- a/html/introduction_slides.html
+++ b/html/introduction_slides.html
@@ -346,16 +346,24 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <section id="anatomy-of-the-web-map" class="slide level2">
 <h2>Anatomy of the Web Map</h2>
 </section>
-<section id="title" class="slide level2">
-<h2>title</h2>
-
-<img data-src="../img/gmaps.png" class="r-stretch"></section>
-<section id="section" class="slide level2" data-background="../slides/figs/osm.png" data-background-size="contain">
+<section id="section" class="slide level2">
 <h2></h2>
-</section>
-<section id="section-1" class="slide level2" data-background="../slides/figs/cdrc_maps.png" data-background-size="contain">
+<center>
+<img data-src="./figs/gmaps.png" alt="centered image" width="80%" height="80%">
+<center>
+</center></center></section>
+<section id="section-1" class="slide level2">
 <h2></h2>
-</section>
+<center>
+<img data-src="./figs/osm.png" alt="centered image" width="80%" height="80%">
+<center>
+</center></center></section>
+<section id="section-2" class="slide level2">
+<h2></h2>
+<center>
+<img data-src="./figs/cdrc_maps.png" alt="centered image" width="80%" height="80%">
+<center>
+</center></center></section>
 <section id="building-blocks-of-a-web-map" class="slide level2">
 <h2>Building blocks of a web map</h2>
 <div class="fragment">
@@ -378,52 +386,24 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 </section>
 <section id="hardware" class="slide level2">
 <h2>Hardware</h2>
-<table>
-<tbody>
-<tr class="odd">
-<td><img data-src="../img/gmaps/paper_map.svg"></td>
-<td><img data-src="../slides/figs/server.jpg"></td>
-</tr>
-</tbody>
-</table>
-</section>
+<center>
+<center>
+<img data-src="./figs/paper_map.svg" width="20%" height="20%"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/server.jpg" width="20%" height="20%">
+<center>
+</center></center></center></section>
 <section id="software" class="slide level2">
 <h2>Software</h2>
-<table>
-<colgroup>
-<col style="width: 55%">
-<col style="width: 22%">
-<col style="width: 22%">
-</colgroup>
-<tbody>
-<tr class="odd">
-<td>![](../slides/figs/pen.jpg)[`url`](https://www.flickr.com/photos/orangeacid/204163563)</td>
-<td>![](../slides/figs/qgis.png)</td>
-<td><img data-src="../slides/figs/code.png"></td>
-</tr>
-</tbody>
-</table>
-</section>
+<center>
+<img data-src="./figs/pen.jpg" height="180"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/qgis.png" height="300">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/code.png" height="300">
+<center>
+<p><code>url</code></p>
+</center></center></section>
 <section id="design" class="slide level2">
 <h2>Design</h2>
-<table>
-<colgroup>
-<col style="width: 22%">
-<col style="width: 77%">
-</colgroup>
-<tbody>
-<tr class="odd">
-<td><img data-src="../slides/figs/bad_mashup.png"></td>
-<td><img data-src="../slides/figs/election_map.png">[`url`](https://www.theguardian.com/us-news/ng-interactive/2016/nov/08/us-election-2016-results-live-clinton-trump?view=map&amp;type=presidential)</td>
-</tr>
-</tbody>
-</table>
-</section>
-<section>
-<section id="section-2" class="title-slide slide level1 center">
-<h1></h1>
-
-</section>
+<center>
+<img data-src="./figs/bad_mashup.png" height="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/election_map.png" height="500">
+<center>
+</center></center></section>
 <section id="overview" class="slide level2">
 <h2>Overview</h2>
 </section>
@@ -444,11 +424,6 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <li>Due on <span class="hlg">W-6</span> and <span class="hlg">W-11</span></li>
 <li>Description in lectures + lab clinics</li>
 </ul>
-</section></section>
-<section>
-<section id="section-3" class="title-slide slide level1 center">
-<h1></h1>
-
 </section>
 <section id="logistics" class="slide level2">
 <h2>Logistics</h2>
@@ -456,7 +431,7 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <section id="website" class="slide level2">
 <h2>Website</h2>
 <center>
-<img src="../slides/figs/course_website.png" height="400">
+<img src="./figs/website.png" height="500">
 </center>
 <center>
 <small> <a href="https://gdsl-ul.github.io/wma/"><code>https://gdsl-ul.github.io/wma/</code></a> </small>
@@ -464,23 +439,18 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 </section>
 <section id="lecturelabs" class="slide level2">
 <h2>Lecture/Labs</h2>
-<p><strong>Lectures</strong>: <em>Fridays</em> 1pm-2pm @<code>Teams</code></p>
+<p><strong>Lectures</strong>: <em>Mondays</em> 9-10am @<code>Teams</code></p>
 <p><left> - Live streams + video archive </left></p>
 <p><left> - Underlying concepts + Context </left></p>
-<p><strong>Labs</strong>: <em>Fridays</em> 3pm-5pm @<code>Teams</code></p>
+<p><strong>Labs</strong>: <em>Mondays</em> 10am-12noon @<code>Teams</code></p>
 <p><left> - Hands on </left></p>
 <p><left> - Interactive </left></p>
 </section>
 <section id="teams" class="slide level2">
 <h2>Teams</h2>
 <center>
-<img data-src="../slides/figs/teams.png">
+<img data-src="./figs/teams.png">
 </center>
-</section></section>
-<section>
-<section id="section-4" class="title-slide slide level1 center">
-<h1></h1>
-
 </section>
 <section id="homework" class="slide level2">
 <h2>Homework</h2>
@@ -490,8 +460,8 @@ Elisabetta Pietrostefani &amp; Dani Arribas-Bel
 <li>Contribute the link to Teams</li>
 </ul>
 </div>
-</section></section>
-<section id="section-5" class="title-slide slide level1 center">
+</section>
+<section id="section-3" class="title-slide slide level1 center">
 <h1></h1>
 <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"></a><br><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Web Mapping &amp; Analysis</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://darribas.org" property="cc:attributionName" rel="cc:attributionURL">Dani Arribas-Bel</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
 <div class="footer footer-default">
