Final touches by DAB

--- a/html/introduction_slides.html
+++ b/html/introduction_slides.html
@@ -332,22 +332,10 @@
 <li>Logistics</li>
 </ul>
 </section>
-<<<<<<< HEAD
 <section>
 <section id="anatomy-of-the-web-map" class="title-slide slide level1 center">
 <h1>Anatomy of the Web Map</h1>
 
-</section>
-<section id="section" class="slide level2" data-background="../img/gmaps.png" data-background-size="contain">
-<h2></h2>
-</section>
-<section id="section-1" class="slide level2" data-background="../img/osm.png" data-background-size="contain">
-<h2></h2>
-</section>
-<section id="section-2" class="slide level2" data-background="../img/cdrc_maps.png" data-background-size="contain">
-=======
-<section id="anatomy-of-the-web-map" class="slide level2">
-<h2>Anatomy of the Web Map</h2>
 </section>
 <section id="section" class="slide level2">
 <h2></h2>
@@ -362,7 +350,6 @@
 <center>
 </center></center></section>
 <section id="section-2" class="slide level2">
->>>>>>> 72a0a1a0d43004ea5dc0cf58fb1e443e98bcc302
 <h2></h2>
 <center>
 <img data-src="./figs/cdrc_maps.png" alt="centered image" width="80%" height="80%">
@@ -390,47 +377,48 @@
 </section>
 <section id="hardware" class="slide level2">
 <h2>Hardware</h2>
-<<<<<<< HEAD
-<p><img data-src="../img/paper_map.svg" class="absolute" style="left: 0px; width: 350px; "></p>
-<p><img data-src="../img/server.jpg" class="absolute" style="left: 500px; width: 350px; "></p>
-</section>
-<section id="software" class="slide level2">
-<h2>Software</h2>
-<!--Source: https://www.flickr.com/photos/orangeacid/204163563 -->
-<p><img data-src="../img/pen.jpg" class="absolute" style="width: 300px; "> <img data-src="../img/qgis.png" class="absolute" style="width: 300px; "> <img data-src="../img/code.png" class="absolute" style="width: 300px; "></p>
-</section>
-<section id="design" class="slide level2">
-<h2>Design</h2>
-<center>
-<img data-src="../img/bad_mashup.png" width="350"> <!-- https://www.theguardian.com/us-news/ng-interactive/2016/nov/08/us-election-2016-results-live-clinton-trump?view=map&type=presidential --> <img data-src="../img/election_map.png" width="550">
-</center>
-</section></section>
-<section>
-<section id="overview" class="title-slide slide level1 center">
-<h1>Overview</h1>
-
-=======
-<center>
 <center>
 <img data-src="./figs/paper_map.svg" width="20%" height="20%"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/server.jpg" width="20%" height="20%">
 <center>
-</center></center></center></section>
+</center></center></section>
 <section id="software" class="slide level2">
 <h2>Software</h2>
 <center>
 <img data-src="./figs/pen.jpg" height="180"> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/qgis.png" height="300">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/code.png" height="300">
 <center>
-<p><code>url</code></p>
+<p><a href="https://gdsl-ul.github.io/wma/html/introduction_slides.html#/assessment"><code>url</code></a></p>
 </center></center></section>
 <section id="design" class="slide level2">
 <h2>Design</h2>
 <center>
 <img data-src="./figs/bad_mashup.png" height="500">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<img data-src="./figs/election_map.png" height="500">
 <center>
-</center></center></section>
-<section id="overview" class="slide level2">
-<h2>Overview</h2>
->>>>>>> 72a0a1a0d43004ea5dc0cf58fb1e443e98bcc302
+</center></center></section></section>
+<section>
+<section id="overview" class="title-slide slide level1 center">
+<h1>Overview</h1>
+
+</section>
+<section id="philosophy" class="slide level2">
+<h2>Philosophy</h2>
+<ol type="1">
+<li>This course is like a gym subsciption</li>
+<li>Principles over technology</li>
+<li>Collaborate, do not copy</li>
+</ol>
+</section>
+<section id="delivery-lectures-labs" class="slide level2">
+<h2>Delivery: lectures + labs</h2>
+<h3 id="lectures">Lectures</h3>
+<ul>
+<li>Underlying concepts</li>
+<li>Sometimes standard, sometimes flipped (we’ll announce!)</li>
+</ul>
+<h3 id="labs">Labs</h3>
+<ul>
+<li>Hands on!</li>
+<li>Collaborate <em>and</em> participate</li>
+</ul>
 </section>
 <section id="content" class="slide level2">
 <h2>Content</h2>
@@ -449,67 +437,42 @@
 <li>Due on <span class="hlg">W-6</span> and <span class="hlg">W-11</span></li>
 <li>Description in lectures + lab clinics</li>
 </ul>
-<<<<<<< HEAD
 </section></section>
 <section>
 <section id="logistics" class="title-slide slide level1 center">
 <h1>Logistics</h1>
 
-=======
->>>>>>> 72a0a1a0d43004ea5dc0cf58fb1e443e98bcc302
 </section>
 <section id="website" class="slide level2">
 <h2>Website</h2>
 <center>
-<<<<<<< HEAD
-<img src="../img/course_website.png" height="400">
-</center>
-<center>
-<a href="https://gdsl-ul.github.io/wma/"><code>https://gdsl-ul.github.io/wma/</code></a>
-=======
 <img src="./figs/website.png" height="500">
 </center>
 <center>
-<small> <a href="https://gdsl-ul.github.io/wma/"><code>https://gdsl-ul.github.io/wma/</code></a> </small>
->>>>>>> 72a0a1a0d43004ea5dc0cf58fb1e443e98bcc302
+<a href="https://gdsl-ul.github.io/wma/"><code>https://gdsl-ul.github.io/wma/</code></a>
 </center>
-</section>
-<section id="lecturelabs" class="slide level2">
-<h2>Lecture/Labs</h2>
-<p><strong>Lectures</strong>: <em>Mondays</em> 9-10am @<code>Teams</code></p>
-<p><left> - Live streams + video archive </left></p>
-<p><left> - Underlying concepts + Context </left></p>
-<p><strong>Labs</strong>: <em>Mondays</em> 10am-12noon @<code>Teams</code></p>
-<p><left> - Hands on </left></p>
-<p><left> - Interactive </left></p>
 </section>
 <section id="teams" class="slide level2">
 <h2>Teams</h2>
 <center>
-<<<<<<< HEAD
-<img data-src="../img/teams.png">
-</center>
-</section></section>
-<section id="homework" class="title-slide slide level1 center">
-<h1>Homework</h1>
-=======
 <img data-src="./figs/teams.png">
 </center>
 </section>
+<section id="sessions" class="slide level2">
+<h2>Sessions</h2>
+<ul>
+<li>Lectures <em>and</em> labs in one 3h session (with breaks!)</li>
+<li><strong>Mondays 9am-12pm</strong> (lecture 1h, lab 2h approx)</li>
+<li>Always linked to activity on Teams (i.e., stay tuned on Teams!)</li>
+</ul>
+</section>
 <section id="homework" class="slide level2">
 <h2>Homework</h2>
->>>>>>> 72a0a1a0d43004ea5dc0cf58fb1e443e98bcc302
-<div class="fragment">
 <ul>
 <li>Bring at least one example of <span class="hlg">web mapping</span> that you find <span class="hlg">compelling</span></li>
 <li>Contribute the link to Teams</li>
 </ul>
-</div>
-</section>
-<<<<<<< HEAD
-
-=======
->>>>>>> 72a0a1a0d43004ea5dc0cf58fb1e443e98bcc302
+</section></section>
 <section id="section-3" class="title-slide slide level1 center">
 <h1></h1>
 <p><a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/"><img src="https://i.creativecommons.org/l/by-sa/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"></a><br><span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Web Mapping &amp; Analysis</span> by <a xmlns:cc="http://creativecommons.org/ns#" href="http://darribas.org" property="cc:attributionName" rel="cc:attributionURL">Dani Arribas-Bel</a> is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by-sa/4.0/">Creative Commons Attribution-ShareAlike 4.0 International License</a>.</p>
