--- a/html/introduction_slides.html
+++ b/html/introduction_slides.html
@@ -407,8 +407,8 @@
 <li>Collaborate, do not copy</li>
 </ol>
 </section>
-<section id="delivery-lectures-labs" class="slide level2">
-<h2>Delivery: lectures + labs</h2>
+<section id="delivery" class="slide level2">
+<h2>Delivery</h2>
 <h3 id="lectures">Lectures</h3>
 <ul>
 <li>Underlying concepts</li>
