--- a/lectures/w01.html
+++ b/lectures/w01.html
@@ -40,7 +40,7 @@
 							<div class="sl-block-content" style="text-align: left;font-size: 90%;" data-placeholder-tag="p" data-placeholder-text="Text">
 <h3><em>Gabriele Filomena &amp; </em></h3>
 
-<h3><em>Elisabetta Pietrostefani</em></h3>
+<h3><em>Matt Howard</em></h3>
 </div>
 						</div></section><section data-id="24c20e79e758b0144f0e4bb7fe13fe3c"><div class="sl-block" data-block-type="text" style="width: 768px; left: 96px; top: 167.5px; height: auto;" data-block-id="f02b868243ec6eda4344ccabedb55cd9">
 							<div class="sl-block-content" style="text-align: left; z-index: 11;" data-placeholder-tag="p" data-placeholder-text="Text"><ul>
@@ -84,7 +84,7 @@
 	<p><code>W9</code>: Advanced Concepts</p>
 	</li>
 	<li>
-	<p><strong><em><code>W10</code>: Assignment II (due w11)</em></strong></p>
+	<p><strong><em><code>W10</code>: Assignment II (due week 13)</em></strong></p>
 	</li>
 </ul></div>
 						</div>
@@ -107,7 +107,7 @@
 	<li>Two pieces of <span class="hlg">coursework</span> (50%, 50%)</li>
 	<li>
 <em>Equivalent</em> to 2,500 words each (= 1000 words + code)</li>
-	<li>Due on <span class="hlg">W-6</span> and <span class="hlg">W-11</span>
+	<li>Due on <span class="hlg">W-6</span> and <span class="hlg">W-13</span>
 </li>
 	<li>Description on module webpage + lab clinics</li>
 	<li>Submission in <em>.HTML</em>
@@ -179,7 +179,7 @@
 
 <p style="color:rgb(0, 0, 0)"> </p>
 
-<p style="color:rgb(0, 0, 0)"><strong>Where? Rendall PC Teaching Centre</strong></p>
+<p style="color:rgb(0, 0, 0)"><strong>Where? 502 Building, PC Teaching Centre B</strong></p>
 </div>
 						</div>
 <div class="sl-block" data-block-type="text" style="width: 768px; left: 96px; top: 103.5px; height: auto;" data-block-id="9569d11695c1a4ac2de65c011b7e073c" data-name="text-dcdb54">
